[package]
authors = ["psyomn <lethaljellybean@gmail.com>"]
name = "gar"
version = "0.1.0"

[[bin]]
doc = false
name = "gar"

[dependencies]
chrono = "0.2.16"
flate2 = "0.2.9"
getopts = "0.2.14"
hyper = "0.6.15"
regex = "0.1.41"
rustc_serialize = "0.3.16"
term = "0.2.12"
toml = "0.1.23"
walkdir = "0.1.3"
