[package]
authors = ["psyomn <lethaljellybean@gmail.com>"]
name = "gar"
version = "0.2.0"

[[bin]]
doc = false
name = "gar"

[dependencies]
chrono = "0.2.16"
clap = "1.4.7"
flate2 = "0.2.9"
handlebars = "0.11.2"
hyper = "0.6.15"
regex = "0.1.41"
rustc-serialize = "0.3.16"
term = "0.2.12"
time = "0.1.33"
toml = "0.1.23"
walkdir = "0.1.3"
