[package]
authors = ["psyomn <lethaljellybean@gmail.com>"]
name = "gar"
version = "0.3.0"

[[bin]]
doc = false
name = "gar"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
flate2 = "1.0.13"
handlebars = "3.0.1"
attohttpc = "0.13"
regex = "0.1.41"
rustc-serialize = "0.3.16"
time = "0.1.33"
toml = "0.1.23"
walkdir = "=0.1.3"
